--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,16 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  text-align: center;
+  gap: 8px;
+}
+
+.field {
+  padding: 12px;
+  border-radius: 2px;
+  font-size: x-large;
+  font-family: cursive;
+}
